force-app/main/default/objects/ResidentialLoanApplication/fields/Max_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_Amount__c</fullName>
    <label>Max Loan Amount</label>
    <summarizedField>LoanApplicationProperty.CJA_Mortgage__Remaining_Equity__c</summarizedField>
    <summaryForeignKey>LoanApplicationProperty.LoanApplicationId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>