force-app/main/default/objects/ResidentialLoanApplication/fields/Monthly_APR__c.field-meta.xml
<CustomField>
    <fullName>Monthly_APR__c</fullName>
    <label>Monthly APR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>