force-app/main/default/objects/ResidentialLoanApplication/fields/Net_Transfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Transfer_Amount__c</fullName>
    <formula>Blended_Loan_Amount__c -
All_Parties_Fees__c +
 CJA_Mortgage__Commitment_Fee__c -
 Administration_Fee__c -
Inspection_Fee__c -
Anticipated_IAD__c -
Interest_Reserve_Fee__c  -
Other_Fee_1__c -
Other_Fee_2__c -
 CJA_Mortgage__Holdback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Transfer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>