force-app/main/default/objects/ResidentialLoanApplication/fields/New_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>New_Risk_Rating__c</fullName>
    <inlineHelpText>New risk rating for the applications</inlineHelpText>
    <label>Overriden Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>