force-app/main/default/objects/ResidentialLoanApplication/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <formula>If (
DAY(  DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c ) )!=1,
if (MONTH( DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c)  )=12,
DATE(YEAR( DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c)  )+1, 3, 1 ),
if (MONTH(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )=11,
DATE(YEAR(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )+1, 2, 1 ),
if (MONTH(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )=10,
DATE(YEAR(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )+1, 1, 1 ),
DATE(YEAR(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) ), MONTH(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )+3, 1 )
)
)
),if (MONTH(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )=12,
DATE(YEAR(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )+1, 2, 1 ),
if (MONTH(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )=11,
DATE(YEAR(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )+1, 1, 1 ),
DATE(YEAR(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) ), MONTH(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c) )+2, 1 )
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>