force-app/main/default/objects/ResidentialLoanApplication/fields/Other_Fee_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Fee 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>