force-app/main/default/objects/ResidentialLoanApplication/fields/Overall_RIsk_Rating2__c.field-meta.xml
<CustomField>
    <fullName>Overall_RIsk_Rating2__c</fullName>
    <formula>If ((CONTAINS(Overall_Risk_Text__c,&apos;High&apos;)) 
&amp;&amp; Override_Risk_Rating__c = false,
&apos;High&apos;,
IF(ISPICKVAL(New_Risk_Rating__c,&apos;High&apos;) 
,&apos;High&apos;,&apos;Low&apos;))</formula>
    <inlineHelpText>If any applicants have an overall rating over 9, ensure the Enhanced Due Diligence Checklist is complete</inlineHelpText>
    <label>Overall Client Risk Rating</label>
    <type>Text</type>
</CustomField>