force-app/main/default/objects/ResidentialLoanApplication/fields/Overall_RIsk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_RIsk_Rating__c</fullName>
    <inlineHelpText>Final risk rating for this Application</inlineHelpText>
    <label>Overall RIsk Rating</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>