force-app/main/default/objects/ResidentialLoanApplication/fields/Overall_Risk_Text__c.field-meta.xml
<CustomField>
    <fullName>Overall_Risk_Text__c</fullName>
    <label>Overall Risk Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>