force-app/main/default/objects/ResidentialLoanApplication/fields/Overall_Suspiciousness__c.field-meta.xml
<CustomField>
    <fullName>Overall_Suspiciousness__c</fullName>
    <formula>IF(ISBLANK(Overall_Suspiciousness_Text__c),&apos;No&apos;,Overall_Suspiciousness_Text__c)</formula>
    <inlineHelpText>If any Applicant&apos;s Transaction Monitoring Checklist has 1 or more values marked as Yes, ensure that the UTR is complete.</inlineHelpText>
    <label>Suspicious Transaction?</label>
    <type>Text</type>
</CustomField>