force-app/main/default/objects/ResidentialLoanApplication/fields/Overall_Suspiciousness_Text__c.field-meta.xml
<CustomField>
    <fullName>Overall_Suspiciousness_Text__c</fullName>
    <label>Overall Suspiciousness Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>