force-app/main/default/objects/ResidentialLoanApplication/fields/Override_Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Override_Authorized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the person who authorized the change of risk rating.</inlineHelpText>
    <label>Override Authorized By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Overriden_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>