force-app/main/default/objects/ResidentialLoanApplication/fields/Override_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Override_Risk_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually set risk rating for this Application?</inlineHelpText>
    <label>Override Risk Rating?</label>
    <type>Checkbox</type>
</CustomField>