force-app/main/default/objects/ResidentialLoanApplication/fields/Present_Value__c.field-meta.xml
<CustomField>
    <fullName>Present_Value__c</fullName>
    <formula>Blended_Loan_Amount__c -
(
Inspection_Fee__c+
Appraisal_Fee__c+
Title_Insurance_Fee__c+
Administration_Fee__c+
Interest_Reserve_Fee__c+
Legal_Fee__c+
Other_Fee_1__c+
Other_Fee_2__c+
AWC_Fee__c+
/*which includes 3rd party*/
Total_Broker_Fee__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>