force-app/main/default/objects/ResidentialLoanApplication/fields/Rationale_For_Override__c.field-meta.xml
<CustomField>
    <fullName>Rationale_For_Override__c</fullName>
    <inlineHelpText>Reason(s) for overriding this risk rating</inlineHelpText>
    <label>Rationale For Override:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>