force-app/main/default/objects/ResidentialLoanApplication/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <inlineHelpText>Date on which this Application was last reviewed</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>