force-app/main/default/objects/ResidentialLoanApplication/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the person who audited this Application for compliance</inlineHelpText>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>