force-app/main/default/objects/ResidentialLoanApplication/fields/Semi_Annual_APR__c.field-meta.xml
<CustomField>
    <fullName>Semi_Annual_APR__c</fullName>
    <label>Semi-Annual APR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>