force-app/main/default/objects/ResidentialLoanApplication/fields/Senior_Amortization__c.field-meta.xml
<CustomField>
    <fullName>Senior_Amortization__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Senior Amortization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>