force-app/main/default/objects/ResidentialLoanApplication/fields/Senior_Broker_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Senior_Broker_Fee_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Senior Broker Fee Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>