force-app/main/default/objects/ResidentialLoanApplication/fields/Senior_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Senior_Interest_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Senior Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>