force-app/main/default/objects/ResidentialLoanApplication/fields/Senior_Lender_Fee__c.field-meta.xml
<CustomField>
    <fullName>Senior_Lender_Fee__c</fullName>
    <formula>IF(
    ISPICKVAL(Senior_Lender_Fee_Type__c, &quot;Percent&quot;),
    Senior_Loan_Amount__c * Senior_Lender_Fee_Percent__c,
    Senior_Lender_Fee_Custom__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Lender Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>