force-app/main/default/objects/ResidentialLoanApplication/fields/Senior_Lender_Fee_Custom__c.field-meta.xml
<CustomField>
    <fullName>Senior_Lender_Fee_Custom__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Senior Lender Fee Custom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>