force-app/main/default/objects/ResidentialLoanApplication/fields/Senior_Lender_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Senior_Lender_Fee_Type__c</fullName>
    <defaultValue>&quot;Percent&quot;</defaultValue>
    <label>Senior Lender Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
                <default>true</default>
                <label>Percent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>