force-app/main/default/objects/ResidentialLoanApplication/fields/Senior_LTV__c.field-meta.xml
<CustomField>
    <fullName>Senior_LTV__c</fullName>
    <label>Senior LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>