force-app/main/default/objects/ResidentialLoanApplication/fields/Senior_Payment__c.field-meta.xml
<CustomField>
    <fullName>Senior_Payment__c</fullName>
    <formula>if(Senior_Loan_Amount__c != 0  &amp;&amp; Senior_Interest_Rate__c &gt; 0,

if(Senior_Amortization__c &gt; 0,
(Senior_Loan_Amount__c * ((Senior_Interest_Rate__c / 100) / 12) / (1 - ((1/(1 + ((Senior_Interest_Rate__c / 100) / 12))) ^ (Senior_Amortization__c * 12))))
,Senior_Loan_Amount__c * ((Senior_Interest_Rate__c / 100) / 12))
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>