force-app/main/default/objects/ResidentialLoanApplication/fields/Shortfall_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shortfall_Amount__c</fullName>
    <formula>Blended_Loan_Amount__c - Total_Lender_Fee__c - Total_Broker_Fee__c - Interest_Reserve_Fee__c - Interest_Adjustment__c - Legal_Fee__c - Debt_Items_to_Pay_off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shortfall Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>