force-app/main/default/objects/ResidentialLoanApplication/fields/Show_Broker_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Show_Broker_Invoice__c</fullName>
    <formula>IF( AND(Text( CJA_Mortgage__Embed_Broker_into_Lender_Fees__c )=&quot;Yes&quot; , Total_Broker_Fee__c &gt;0), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Broker Invoice</label>
    <type>Checkbox</type>
</CustomField>