force-app/main/default/objects/ResidentialLoanApplication/fields/Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWC Solicitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Loan Applications (AWC Solicitor)</relationshipLabel>
    <relationshipName>Residential_Loan_Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>