force-app/main/default/objects/ResidentialLoanApplication/fields/Solicitor_Firm__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Firm__c</fullName>
    <formula>Solicitor__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitor Firm</label>
    <type>Text</type>
</CustomField>