force-app/main/default/objects/ResidentialLoanApplication/fields/T1_Underwriting_Time__c.field-meta.xml
<CustomField>
    <fullName>T1_Underwriting_Time__c</fullName>
    <formula>Approval_Cancellation_date_time__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T1: Underwriting Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>