force-app/main/default/objects/ResidentialLoanApplication/fields/T2_Approval_Time__c.field-meta.xml
<CustomField>
    <fullName>T2_Approval_Time__c</fullName>
    <formula>Approved_Date_Time__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T2: Approval Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>