force-app/main/default/objects/ResidentialLoanApplication/fields/T3_Commitment_Timer__c.field-meta.xml
<CustomField>
    <fullName>T3_Commitment_Timer__c</fullName>
    <formula>Commitment_Date_Time__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T3: Commitment Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>