force-app/main/default/objects/ResidentialLoanApplication/fields/TDS_offset_rental__c.field-meta.xml
<CustomField>
    <fullName>TDS_offset_rental__c</fullName>
    <formula>((Total_Liability_Payments__c + Total_Housing_Costs__c - Total_Monthly_Rental_Income__c + ( Condo_Fee__c * 0.5) )
/ (CJA_Mortgage__Total_Regular_Income1__c/12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDS (offset rental)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>