force-app/main/default/objects/ResidentialLoanApplication/fields/TDS_rental_as_income__c.field-meta.xml
<CustomField>
    <fullName>TDS_rental_as_income__c</fullName>
    <formula>((Total_Liability_Payments__c + Total_Housing_Costs__c + ( Condo_Fee__c * 0.5) )
/ ((CJA_Mortgage__Total_Regular_Income1__c/12)+ Total_Monthly_Rental_Income__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDS (rental as income)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>