force-app/main/default/objects/ResidentialLoanApplication/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Loan Applications (Third Party)</relationshipLabel>
    <relationshipName>Residential_Loan_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>