force-app/main/default/objects/ResidentialLoanApplication/fields/Title_Insurance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Title_Insurance_Fee__c</fullName>
    <defaultValue>275</defaultValue>
    <label>Title Insurance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>