force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Total_Applicants__c</fullName>
    <label>Total Applicants</label>
    <summaryForeignKey>LoanApplicant.LoanApplicationId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>