force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Broker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Broker_Fee__c</fullName>
    <formula>Senior_Broker_Fee__c +  Junior_Broker_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Broker Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>