force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges__c</fullName>
    <formula>Title_Insurance_Fee__c +
Inspection_Fee__c +
Legal_Fee__c +
AWC_Fee__c +
Total_Broker_Fee__c +
Other_Fee_1__c +
Other_Fee_2__c +
Administration_Fee__c +
Interest_Reserve_Fee__c +
Anticipated_IAD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>