force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Cost_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Credit__c</fullName>
    <formula>Charges_Included_in_TCC__c + Total_Interest_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost of Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>