force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Downpayment_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Total_Downpayment_Recieved__c</fullName>
    <label>Total Downpayment Recieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>