force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Fees_excl_Fund_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees_excl_Fund_Fees__c</fullName>
    <formula>if ( text( CJA_Mortgage__Embed_Broker_into_Lender_Fees__c ) = &quot;Yes&quot;,

 AWC_minus_Fund_Fees__c +  Total_Broker_Fee__c +  Total_Third_Party_Fee__c ,

AWC_minus_Fund_Fees__c + Total_Third_Party_Fee__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees (excl Fund Fees)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>