force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Fund_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fund_Fees__c</fullName>
    <label>Total Fund Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>