force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Housing_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Housing_Costs__c</fullName>
    <formula>round (Blended_Payment__c +  Total_Property_Tax__c +  CJA_Mortgage__Total_Property_Utilities_Heating__c,2)</formula>
    <label>Total Housing Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>