force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Interest_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Cost__c</fullName>
    <formula>ROUND((
((Blended_Loan_Amount__c - ( Blended_Payment__c * 12 / Blended_Interest_Rate__c )) * 1 + ( Blended_Payment__c * 12 / Blended_Interest_Rate__c )
)
- 
(
(Blended_Loan_Amount__c - ( Blended_Payment__c * 12 / Blended_Interest_Rate__c )) * (1+(Blended_Interest_Rate__c / 12 )) ^ (Loan_Term__c*12) + ( Blended_Payment__c * 12 / Blended_Interest_Rate__c )
)
- 
(
Blended_Payment__c * (Loan_Term__c*12))
* -1 ),2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>