force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Lender_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Lender_Fee__c</fullName>
    <formula>Senior_Lender_Fee__c +  Junior_Lender_Fee__c</formula>
    <label>Total Lender Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>