force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Liability_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Liability_Payments__c</fullName>
    <label>Total Liability Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>