force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Monthly_Rental_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Rental_Income__c</fullName>
    <label>Total Monthly Rental Income</label>
    <summarizedField>LoanApplicationProperty.ExpMonthlyRentalIncome</summarizedField>
    <summaryForeignKey>LoanApplicationProperty.LoanApplicationId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>