force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Property_Encumbrance__c.field-meta.xml
<CustomField>
    <fullName>Total_Property_Encumbrance__c</fullName>
    <label>Total Property Encumbrance</label>
    <summarizedField>LoanApplicationProperty.CJA_Mortgage__Encumbrance__c</summarizedField>
    <summaryForeignKey>LoanApplicationProperty.LoanApplicationId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>