force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Third_Party_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Third_Party_Fee__c</fullName>
    <formula>Senior_Third_Party_Fee__c +  Junior_Third_Party_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Third Party Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>