force-app/main/default/objects/ResidentialLoanApplication/fields/UTR_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>UTR_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UTR Notification Sent?</label>
    <type>Checkbox</type>
</CustomField>