force-app/main/default/objects/ResidentialLoanApplication/fields/White_Label__c.field-meta.xml
<CustomField>
    <fullName>White_Label__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>White Label</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brokerage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Loan Applications (White Label)</relationshipLabel>
    <relationshipName>White_Labelling_RLAs</relationshipName>
    <type>Lookup</type>
</CustomField>