force-app/main/default/objects/ResidentialLoanApplication/validationRules/Cannot_move_to_approve_from_underwriting.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_move_to_approve_from_underwriting</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Stage__c),&apos;Underwriting&apos;) &amp;&amp; ISPICKVAL(Stage__c,&apos;Approved&apos;)</errorConditionFormula>
    <errorMessage>You cannot move to Approved from Underwriting Stage</errorMessage>
</ValidationRule>