force-app/main/default/objects/ResidentialLoanApplication/validationRules/Complete_Compliance_Before_Override.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Compliance_Before_Override</fullName>
    <active>true</active>
    <errorConditionFormula>Override_Risk_Rating__c = true &amp;&amp;
(ISBLANK(Reviewer__c) || ISBLANK(Review_Date__c)
|| Has_the_Client_Risk_Assessment_Complete__c = false
)</errorConditionFormula>
    <errorMessage>Please complete the Client Risk Rating form and fill in the Reviewer details before overriding it</errorMessage>
</ValidationRule>