force-app/main/default/objects/ResidentialLoanApplication/validationRules/Fill_all_Compliance_Override_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_all_Compliance_Override_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>Override_Risk_Rating__c = true &amp;&amp; (ISBLANK(Override_Authorized_By__c) 
|| ISBLANK(Date_of_Override__c) || ISPICKVAL(New_Risk_Rating__c,&apos;&apos;)
|| ISBLANK(Rationale_For_Override__c))</errorConditionFormula>
    <errorMessage>Please fill in all the details to override the risk rating</errorMessage>
</ValidationRule>